<resources>
    <string name="app_name">Todo App Demo</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_register">Register</string>
    <string name="label_password_confirm">Password Confirm</string>
    <string name="label_logout">Logout</string>
    <string name="label_create_todo">Create Todo</string>
    <string name="label_title">Title</string>
    <string name="label_description">Description</string>
    <string name="label_create">Create</string>
</resources>